<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="">
        <menu>

        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_latest"
            />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/icon_category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_gif"
            android:icon="@drawable/icon_gif"
            android:title="@string/menu_gif" />
        <item
            android:id="@+id/nav_myfavorite"
            android:icon="@drawable/icon_heart"
            android:title="@string/menu_myfavorite" />
        <item
            android:id="@+id/nav_rateApp"
            android:icon="@drawable/icon_star"
            android:title="@string/menu_rateapp" />
        <item
            android:id="@+id/nav_moreApp"
            android:icon="@drawable/icon_more"
            android:title="@string/menu_moreapp" />
        <item
            android:id="@+id/nav_aBout"
            android:icon="@drawable/icon_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/icon_police"
            android:title="@string/menu_privacypolice" />
    </group>

</menu>
